Isotope eCommerce Changelog
===========================

Version 0.2.10 (2011-06-??)
------------------------------
- Added support for Contao 2.10 "structure" event (see http://dev.contao.org/issues/2504)
- Added shipping & payment method filter to orders
- Added: includeBlankOption=true for select options using foreignKey (Ticket #292)
- Added product sku to filter module
- Changed tl_iso_products::getCategoryList from private to protected function (Ticket #477)
- Fixed error message when editing page category (Ticket #469)
- Fixed IsotopeProductCollection::getProducts database caching
- Fixed rules error on product restrictions when not product in cart (Ticket #471)
- Fixed coupon could be applied multiple times by using different letter cases (Ticket #476)
- Fixed text email fields, make sure they never contain HTML

Version 0.2.9 (2011-05-23)
------------------------------
- Improved: Show disabled shipping and payment modules on frontend preview
- Improved Postfinance payment module with new authentication method (Ticket #235)
- Improved: Only add href_reader if field is available in product collection items table (Ticket #453)
- Fixed bug when products have no SKU
- Fixed product rules bug with member limits (Ticket #409)
- Fixed specialchars in image gallery and checkout steps (Ticket #426)
- Fixed issue when product alias starts with a digit (Ticket #452)
- Fixed empty option value ##cart_text## (Ticket #418)

Version 0.2.8 (2011-05-09)
------------------------------
- Added import/export option for mail templates
- Added quantity_requested to product template
- Added support for conditionalselect as conditionField
- Improved: Do not allow negative cart/order totals
- Improved: Do not cache arrData from IsotopeProduct, return NULL for non-existing values
- Improved backend order listing (Ticket #424)
- Fixed issue with email address on checkout
- Fixed potential product load problem in IsotopeProductCollection